--- a/casino-strategy/index.html
+++ b/casino-strategy/index.html
@@ -1,56 +1,163 @@
 <!DOCTYPE html>
-<html lang="ko" data-theme="light">
+<html data-theme="light" lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>카지노 전략 가이드 | 마틴게일·파롤리·오스카·피보나치·라부셰르 | 88ST</title>
-  <meta name="description" content="바카라/룰렛 기반 대표 전략 가이드와 계산 도구 링크를 제공합니다."/>
-  <meta name="keywords" content="마틴게일, 파롤리, 오스카 그라인드, 피보나치, 라부셰르, 달랑베르, 전략 가이드, 88ST"/>
-  <meta name="robots" content="index,follow"/>
-  <link rel="canonical" href="https://88st.cloud/casino-strategy/"/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="88 (팔팔커뮤니티)"/>
-  <meta property="og:title" content="카지노 전략 가이드 | 88ST"/>
-  <meta property="og:description" content="대표 전략 가이드/도구 모음"/>
-  <meta property="og:url" content="https://88st.cloud/casino-strategy/"/>
-  <meta property="og:image" content="/img/logo.png"/>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="stylesheet" href="/assets/c.9995eeb5cf82.css"/>
-  <link rel="stylesheet" href="/assets/c.43df7d0713c1.css"/>
-  <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css"/>
-  <style>
-    .hub-wrap{max-width:980px;margin:0 auto;padding:18px 14px 42px;}
-    .hub-hero{margin-top:12px;}
-    .hub-hero h1{font-size:18px;margin:0 0 8px 0;letter-spacing:-.02em;}
-    .hub-hero p{margin:0;color:var(--muted, rgba(255,255,255,.62));font-weight:900;}
-    .hub-grid{margin-top:14px;display:grid;gap:10px;grid-template-columns:1fr 1fr;}
-    @media(max-width:820px){.hub-grid{grid-template-columns:1fr;}}
-    .hub-card{border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.14);border-radius:18px;padding:14px;display:flex;gap:12px;align-items:center;box-shadow:0 10px 32px rgba(0,0,0,.12);}
-    .hub-ic{width:36px;height:36px;border-radius:14px;display:grid;place-items:center;background:rgba(var(--st-accent-rgb,95,178,255),.14);border:1px solid rgba(var(--st-accent-rgb,95,178,255),.25);flex:0 0 auto;}
-    .hub-t{font-weight:1100;}
-    .hub-d{font-size:12px;color:var(--muted, rgba(255,255,255,.62));font-weight:900;margin-top:2px;line-height:1.35;}
-    .hub-a{margin-left:auto;font-weight:1100;text-decoration:none;color:rgba(255,255,255,.92);padding:8px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.12);background:rgba(255,255,255,.06);}
-    .hub-a:hover{background:rgba(255,255,255,.10);}
-  </style>
-  <script defer src="/assets/js/j.8829a3ccde44.js"></script>
-  <script defer src="/assets/js/j.9179477b9417.js"></script>
+<meta charset="utf-8"/>
+<!-- Google tag (gtag.js) -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KWT87FBY6S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-KWT87FBY6S', { anonymize_ip: true });
+</script>
+
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>바카라 마틴게일 계산기 | 뱅커 1.97·플레이어 2.0 지원 | 88ST</title>
+<meta content="바카라 마틴게일 배팅법을 PLAYER 2.00 / BANKER 1.97 기준으로 즉시 계산합니다. 다음 베팅, 연패 단계, 세션 손익/최대낙폭을 한눈에 확인하세요." name="description"/>
+<meta content="마틴게일 배팅법, Martingale, 바카라 전략, 배팅 시스템, 자금관리, 리스크 관리, 손익 시뮬레이션, 88ST" name="keywords"/>
+<meta content="index,follow" name="robots"/>
+<link href="https://88st.cloud/casino-strategy/martingale/" rel="canonical"/>
+<meta content="website" property="og:type"/>
+<meta content="88 (팔팔커뮤니티)" property="og:site_name"/>
+<meta content="바카라 마틴게일 계산기 | 뱅커 1.97·플레이어 2.0 지원 | 88ST" property="og:title"/>
+<meta content="바카라 마틴게일 배팅법을 PLAYER 2.00 / BANKER 1.97 기준으로 즉시 계산합니다. 다음 베팅, 연패 단계, 세션 손익/최대낙폭을 한눈에 확인하세요." property="og:description"/>
+<meta content="https://88st.cloud/casino-strategy/martingale/" property="og:url"/>
+<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+<link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
+<link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
+
+<link href="/assets/c.40f97b2b9a20.css" rel="stylesheet"/>
+<script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"홈","item":"https://88st.cloud/"},
+      {"@type":"ListItem","position":2,"name":"카지노 계산기","item":"https://88st.cloud/tool-casino/"},
+      {"@type":"ListItem","position":3,"name":"마틴게일","item":"https://88st.cloud/casino-strategy/martingale/"}
+    ]
+  }
+  </script>
+<script type="application/ld+json">
+  {
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {"@type":"Question","name":"마틴게일은 몇 연패까지 버티나요?","acceptedAnswer":{"@type":"Answer","text":"자금(뱅크롤), 기본베팅, 배당(특히 BANKER 1.97)과 단위 올림에 따라 달라집니다. 계산기에서 자금을 입력해 세션 손익과 최대 낙폭을 확인하세요."}},
+    {"@type":"Question","name":"뱅커 1.97 배당에서 마틴게일 베팅금이 커지는 이유는?","acceptedAnswer":{"@type":"Answer","text":"승리 수익이 베팅×(배당-1)이라 BANKER는 0.97배로 회복에 필요한 베팅이 커질 수 있습니다."}},
+    {"@type":"Question","name":"목표이익(1유닛)은 어떻게 정하나요?","acceptedAnswer":{"@type":"Answer","text":"기본값은 기본베팅×(배당-1)로 설정하면 ‘기본 1승 수익’ 기준이 됩니다. 필요시 직접 입력으로 조정하세요."}},
+    {"@type":"Question","name":"단위 올림(라운딩)은 왜 필요한가요?","acceptedAnswer":{"@type":"Answer","text":"실전에서는 특정 단위로 베팅하는 경우가 많아 라운딩을 적용하면 현실적인 금액으로 계산됩니다."}},
+    {"@type":"Question","name":"마틴게일은 수익을 보장하나요?","acceptedAnswer":{"@type":"Answer","text":"아니요. 어떤 전략도 수익을 보장하지 않습니다. 변동성과 제한을 고려해 책임감 있게 이용하세요."}}
+  ]
+}
+  </script>
+<meta content="/img/logo.png" property="og:image"/>
+<link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/><script defer="" src="/assets/js/build.ver.js?v=v20260224-1845"></script>
+<script defer="" src="/assets/js/build.loader.js?v=v20260224-1845"></script>
+
+<link rel="stylesheet" href="/assets/css/hdr.shell.v1.20260221.css?v=119"/>
 </head>
 <body class="st-app">
-  <main class="hub-wrap">
-    <section class="hub-hero">
-      <h1>카지노 전략 가이드</h1>
-      <p>전략 자체는 “예측”이 아니라 베팅 단위/세션 리스크 관리용으로만 참고하세요.</p>
-    </section>
+<div id="_88stShellHeader" class="header header--shell" role="banner">
+  <div class="hdrShell">
+    <a class="hdrBrand" href="/" aria-label="홈으로 이동">
+      <img class="hdrLogo" src="/img/logo.png" alt="88ST" />
+      <span class="hdrName">88ST.Cloud</span>
+    </a>
 
-    <section class="hub-grid" aria-label="전략 링크">
-      <div class="hub-card"><div class="hub-ic">M</div><div><div class="hub-t">마틴게일</div><div class="hub-d">손실 회복형(고위험)</div></div><a class="hub-a" href="/casino-strategy/martingale/">열기 →</a></div>
-      <div class="hub-card"><div class="hub-ic">P</div><div><div class="hub-t">파롤리</div><div class="hub-d">연승 활용형</div></div><a class="hub-a" href="/casino-strategy/paroli/">열기 →</a></div>
-      <div class="hub-card"><div class="hub-ic">D</div><div><div class="hub-t">달랑베르</div><div class="hub-d">단위 증감형</div></div><a class="hub-a" href="/casino-strategy/dalembert/">열기 →</a></div>
-      <div class="hub-card"><div class="hub-ic">O</div><div><div class="hub-t">오스카 그라인드</div><div class="hub-d">목표 수익 기반</div></div><a class="hub-a" href="/casino-strategy/oscar-grind/">열기 →</a></div>
-      <div class="hub-card"><div class="hub-ic">F</div><div><div class="hub-t">피보나치</div><div class="hub-d">수열 기반 증감</div></div><a class="hub-a" href="/casino-strategy/fibonacci/">열기 →</a></div>
-      <div class="hub-card"><div class="hub-ic">L</div><div><div class="hub-t">라부셰르</div><div class="hub-d">리스트 기반 관리</div></div><a class="hub-a" href="/casino-strategy/labouchere/">열기 →</a></div>
-    </section>
-  </main>
+    <nav class="hdrNavDesktop" aria-label="주요 메뉴">
+      <a class="hdrLink" href="/cert/">인증사이트</a>
+      <a class="hdrLink" href="/">홈</a>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">분석기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/analysis/">스포츠 배당 분석기</a>
+          <a href="/tool-slot/">슬롯 RTP 분석기</a>
+          <a href="/tool-minigame/">미니게임 분석기</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">계산기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/tool-margin/">마진 계산기</a>
+          <a href="/tool-ev/">EV 계산기</a>
+          <a href="/tool-odds/">배당↔확률 변환</a>
+          <a href="/tool-casino/">바카라 전략 계산기</a>
+          <a href="/logbook/">베팅 로그북</a>
+          <a href="/calc/">계산기 홈</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">가이드</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/guide/">가이드 홈</a>
+          <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+        </div>
+      </details>
+    </nav>
+
+    <details class="hdrNavMobile">
+      <summary class="hdrBurger" aria-label="메뉴 열기">≡</summary>
+      <div class="hdrMobileMenu" role="menu">
+        <a href="/cert/">인증사이트</a>
+        <a href="/">홈</a>
+
+        <div class="hdrMobileGroup">
+          <details>
+            <summary>분석기</summary>
+            <div class="hdrMenu">
+              <a href="/analysis/">스포츠 배당 분석기</a>
+              <a href="/tool-slot/">슬롯 RTP 분석기</a>
+              <a href="/tool-minigame/">미니게임 분석기</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>계산기</summary>
+            <div class="hdrMenu">
+              <a href="/tool-margin/">마진 계산기</a>
+              <a href="/tool-ev/">EV 계산기</a>
+              <a href="/tool-odds/">배당↔확률 변환</a>
+              <a href="/tool-casino/">바카라 전략 계산기</a>
+              <a href="/logbook/">베팅 로그북</a>
+              <a href="/calc/">계산기 홈</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>가이드</summary>
+            <div class="hdrMenu">
+              <a href="/guide/">가이드 홈</a>
+              <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+            </div>
+          </details>
+        </div>
+      </div>
+    </details>
+  </div>
+</div>
+<main class="wrap">
+  <section class="section">
+    <div class="title"><span class="badge">가이드</span>카지노 전략 모음</div>
+    <div class="sub">대표 전략을 한 장 요약으로 정리했습니다. (예측이 아니라 <b>운영/리스크</b> 관점)</div>
+
+    <div class="grid" style="display:grid;gap:12px;margin-top:14px;">
+      <a class="card" href="/casino-strategy/martingale/"><div class="k">Martingale</div><div class="h">마틴게일</div><div class="d">연패 복구형 · 파산 리스크 큼</div></a>
+      <a class="card" href="/casino-strategy/dalembert/"><div class="k">D'Alembert</div><div class="h">달랑베르</div><div class="d">완만한 증감 · 변동성 완화</div></a>
+      <a class="card" href="/casino-strategy/fibonacci/"><div class="k">Fibonacci</div><div class="h">피보나치</div><div class="d">수열 기반 · 회복 속도/리스크 중간</div></a>
+      <a class="card" href="/casino-strategy/labouchere/"><div class="k">Labouchere</div><div class="h">라부셰르</div><div class="d">목표 수익형 · 길어질수록 부담</div></a>
+      <a class="card" href="/casino-strategy/oscar-grind/"><div class="k">Oscar's Grind</div><div class="h">오스카 그라인드</div><div class="d">1유닛 목표 · 비교적 보수</div></a>
+      <a class="card" href="/casino-strategy/paroli/"><div class="k">Paroli</div><div class="h">파롤리</div><div class="d">연승 활용 · 손실 제한에 유리</div></a>
+    </div>
+
+    <div class="cta" style="margin-top:14px;">
+      <a class="insight-btn primary" href="/casino/">카지노 전략 분석기 열기 <span aria-hidden="true">→</span></a>
+    </div>
+  </section>
+</main>
 </body>
 </html>
