--- a/cert/index.html
+++ b/cert/index.html
@@ -13,7 +13,7 @@
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 <title>인증사이트 | 가입코드·혜택·출금규정 체크 | 88ST</title>
 <meta content="가입코드/혜택/주의사항을 한 화면에서 비교하고, 즐겨찾기·최근 기록으로 빠르게 재방문하는 인증사이트 카드 모음입니다. 가입 전 롤링/출금/제한 규정은 반드시 재확인하세요." name="description"/>
-<meta content="인증사이트, 보증사이트, 안전한 사이트, 가입코드, 혜택 비교, 출금 규정, 롤링 조건, 제한 조건, 페이백, 첫충, 88ST" name="keywords"/>
+<meta content="토토, 온라인스포츠, 온라인카지노, 슬롯, 슬롯맛집, 안전한토토사이트, 입플사이트, 보증사이트, 인증사이트, 먹튀검증, 가입코드, 페이백, 첫충, 당일페이백, 롤링조건, 출금규정, 88ST" name="keywords"/>
 <meta content="index,follow" name="robots"/>
 <meta content="인증사이트 | 가입코드·혜택·출금규정 체크 | 88ST" property="og:title"/>
 <meta content="가입코드/혜택/주의사항을 한 화면에서 비교하고, 즐겨찾기·최근 기록으로 빠르게 재방문하는 인증사이트 카드 모음입니다. 가입 전 롤링/출금/제한 규정은 반드시 재확인하세요." property="og:description"/>
@@ -22,14 +22,93 @@
 <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="https://88st.cloud/cert/" rel="canonical"/>
-<link href="/assets/c.cert.v56.20260217.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
-<script defer="" src="/assets/js/j.9179477b9417.js"></script>
+<link href="/assets/c.cert.v56.20260217.css?v=v20260223-2600" rel="stylesheet"/>
 <meta content="https://88st.cloud/cert/" property="og:url"/>
-<link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/><link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/><link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/><link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
-<link rel="stylesheet" href="/assets/css/patch.v94.productui.20260219.min.css"/>
+<link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/><link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/><link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
+<link rel="stylesheet" href="/assets/css/hdr.shell.v1.20260221.css?v=119"/>
 </head>
 <body>
+<div id="_88stShellHeader" class="header header--shell" role="banner">
+  <div class="hdrShell">
+    <a class="hdrBrand" href="/" aria-label="홈으로 이동">
+      <img class="hdrLogo" src="/img/logo.png" alt="88ST" />
+      <span class="hdrName">88ST.Cloud</span>
+    </a>
+
+    <nav class="hdrNavDesktop" aria-label="주요 메뉴">
+      <a class="hdrLink" href="/cert/">인증사이트</a>
+      <a class="hdrLink" href="/">홈</a>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">분석기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/analysis/">스포츠 배당 분석기</a>
+          <a href="/tool-slot/">슬롯 RTP 분석기</a>
+          <a href="/tool-minigame/">미니게임 분석기</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">계산기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/tool-margin/">마진 계산기</a>
+          <a href="/tool-ev/">EV 계산기</a>
+          <a href="/tool-odds/">배당↔확률 변환</a>
+          <a href="/tool-casino/">바카라 전략 계산기</a>
+          <a href="/logbook/">베팅 로그북</a>
+          <a href="/calc/">계산기 홈</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">가이드</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/guide/">가이드 홈</a>
+          <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+        </div>
+      </details>
+    </nav>
+
+    <details class="hdrNavMobile">
+      <summary class="hdrBurger" aria-label="메뉴 열기">≡</summary>
+      <div class="hdrMobileMenu" role="menu">
+        <a href="/cert/">인증사이트</a>
+        <a href="/">홈</a>
+
+        <div class="hdrMobileGroup">
+          <details>
+            <summary>분석기</summary>
+            <div class="hdrMenu">
+              <a href="/analysis/">스포츠 배당 분석기</a>
+              <a href="/tool-slot/">슬롯 RTP 분석기</a>
+              <a href="/tool-minigame/">미니게임 분석기</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>계산기</summary>
+            <div class="hdrMenu">
+              <a href="/tool-margin/">마진 계산기</a>
+              <a href="/tool-ev/">EV 계산기</a>
+              <a href="/tool-odds/">배당↔확률 변환</a>
+              <a href="/tool-casino/">바카라 전략 계산기</a>
+              <a href="/logbook/">베팅 로그북</a>
+              <a href="/calc/">계산기 홈</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>가이드</summary>
+            <div class="hdrMenu">
+              <a href="/guide/">가이드 홈</a>
+              <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+            </div>
+          </details>
+        </div>
+      </div>
+    </details>
+  </div>
+</div>
 <main class="cert-wrap">
 <section class="cert-hero">
 <div class="cert-hero-grid">
@@ -90,6 +169,7 @@
           </label>
 </div>
 </div>
+
 <div class="cert-empty" id="emptyHint" style="display:none;">검색 결과가 없습니다. 다른 키워드로 다시 검색해보세요.</div>
 <div class="vendor-grid" id="vendorGrid"></div>
 </section>
@@ -114,7 +194,7 @@
 <summary>SEO / 안내</summary>
 <div class="seo-text">
 <p>
-          안전한토토사이트, 안전 토토사이트, 인증사이트, 보증사이트, 먹튀검증, 입금플러스, 페이백, 가입코드, 스포츠배당분석기, 미니게임분석기, 카지노전략분석기, 슬롯환수율 분석기.
+          토토, 온라인스포츠, 온라인카지노, 슬롯, 슬롯맛집, 안전한토토사이트, 입플사이트, 보증사이트, 인증사이트, 먹튀검증, 가입코드, 페이백, 첫충, 당일페이백, 롤링조건, 출금규정.
         </p>
 <p>
           본 페이지는 “선택을 돕는 안내” 목적이며, 최종 이용 조건은 각 사이트 공지/규정에 따릅니다.
@@ -126,6 +206,9 @@
 <div aria-hidden="true" aria-modal="true" class="popup" id="cardPopup" role="dialog">
 <div class="popup-box" role="document">
 <button aria-label="닫기" class="popup-close" id="closeBtn">✕</button>
+<a class="promo-hero-link" id="pLandingHeroLink" href="#" target="_blank" rel="noopener noreferrer">
+  <img class="promo-hero" id="pHero" src="" alt="혜택 이미지" loading="lazy" decoding="async"/>
+</a>
 <h3 class="popup-title" id="pTitle">업체명</h3>
 <p class="popup-sub">가입코드: <span id="pCode"></span></p>
 <div class="popup-meta">
@@ -135,22 +218,22 @@
 <div class="popup-actions">
 <button class="btn" id="copyBtn">코드 복사</button>
 <button class="btn" id="shareBtn">링크 복사</button>
-<a class="btn primary" data-no-auto-outbound="1" data-outbound-manual="1" href="#" id="pLink" rel="noopener noreferrer" target="_blank">사이트 이동</a>
+<a class="btn" data-no-auto-outbound="1" data-outbound-manual="1" href="#" id="pLanding" rel="noopener noreferrer">혜택 이미지 보기</a>
+<a class="btn primary" data-no-auto-outbound="1" data-outbound-manual="1" href="#" id="pLink" rel="noopener noreferrer" target="_blank">회원가입(이동)</a>
 <a class="btn" data-no-auto-outbound="1" data-outbound-manual="1" href="https://t.me/UZU59" id="pTelegram" rel="noopener noreferrer" target="_blank">문의 (텔레그램)</a>
 <button class="btn" id="favBtn">☆ 즐겨찾기</button>
 </div>
 </div>
 </div>
-<script defer="" src="/assets/js/j.cert.v56.20260217.js?v=74"></script>
+<script defer="" src="/assets/js/j.cert.v56.20260217.js?v=v20260223-2500"></script>
 <script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"WebPage",
-    "name":"인증사이트 | 안전한 토토사이트 안내 · 88ST",
+    "name":"인증사이트 | 안전한 토토사이트 · 88ST.Cloud",
     "url":"https://88st.cloud/cert/",
     "description":"안전한 토토사이트 선택을 돕는 인증사이트 모음. 가입코드/혜택/주의사항을 한 화면에서 확인하고, 즐겨찾기와 최근 기록으로 빠르게 재방문하세요."
   }
   </script>
-<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
