--- a/guide/index.html
+++ b/guide/index.html
@@ -16,16 +16,100 @@
 <meta content="보너스 체크리스트, 카지노/슬롯/미니게임 기본 가이드와 실전 체크 포인트." name="description"/><meta content="가이드, 사용법, EV, 마진, 공정배당, 켈리, 배당 분석, 초보자 안내, 88ST" name="keywords"/>
 <link href="https://88st.cloud/guide/" rel="canonical"/>
 <link href="/assets/css/x.e28fb3ebcc4c.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
+<link href="/assets/css/popup.event.v1.css?v=v20260224-1845" rel="stylesheet"/>
 <meta content="#0b0c10" name="theme-color"/>
-<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/vvip-hub.v85.css?v=85" rel="stylesheet"/>
-<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
-<link rel="stylesheet" href="/assets/css/patch.v94.productui.20260219.min.css"/>
+<script defer="" src="/assets/js/build.ver.js?v=v20260224-1845"></script>
+<script defer="" src="/assets/js/build.loader.js?v=v20260224-1845"></script>
+<script defer src="/assets/js/popup.event.v1.js?v=v20260224-1845"></script>
+
+<link href="/assets/css/promo.slot.v1.20260223.css?v=136" rel="stylesheet"/>
+<link rel="stylesheet" href="/assets/css/hdr.shell.v1.20260221.css?v=119"/>
 </head>
 <body>
+<div id="_88stShellHeader" class="header header--shell" role="banner">
+  <div class="hdrShell">
+    <a class="hdrBrand" href="/" aria-label="홈으로 이동">
+      <img class="hdrLogo" src="/img/logo.png" alt="88ST" />
+      <span class="hdrName">88ST.Cloud</span>
+    </a>
+
+    <nav class="hdrNavDesktop" aria-label="주요 메뉴">
+      <a class="hdrLink" href="/cert/">인증사이트</a>
+      <a class="hdrLink" href="/">홈</a>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">분석기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/analysis/">스포츠 배당 분석기</a>
+          <a href="/tool-slot/">슬롯 RTP 분석기</a>
+          <a href="/tool-minigame/">미니게임 분석기</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">계산기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/tool-margin/">마진 계산기</a>
+          <a href="/tool-ev/">EV 계산기</a>
+          <a href="/tool-odds/">배당↔확률 변환</a>
+          <a href="/tool-casino/">바카라 전략 계산기</a>
+          <a href="/logbook/">베팅 로그북</a>
+          <a href="/calc/">계산기 홈</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">가이드</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/guide/">가이드 홈</a>
+          <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+        </div>
+      </details>
+    </nav>
+
+    <details class="hdrNavMobile">
+      <summary class="hdrBurger" aria-label="메뉴 열기">≡</summary>
+      <div class="hdrMobileMenu" role="menu">
+        <a href="/cert/">인증사이트</a>
+        <a href="/">홈</a>
+
+        <div class="hdrMobileGroup">
+          <details>
+            <summary>분석기</summary>
+            <div class="hdrMenu">
+              <a href="/analysis/">스포츠 배당 분석기</a>
+              <a href="/tool-slot/">슬롯 RTP 분석기</a>
+              <a href="/tool-minigame/">미니게임 분석기</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>계산기</summary>
+            <div class="hdrMenu">
+              <a href="/tool-margin/">마진 계산기</a>
+              <a href="/tool-ev/">EV 계산기</a>
+              <a href="/tool-odds/">배당↔확률 변환</a>
+              <a href="/tool-casino/">바카라 전략 계산기</a>
+              <a href="/logbook/">베팅 로그북</a>
+              <a href="/calc/">계산기 홈</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>가이드</summary>
+            <div class="hdrMenu">
+              <a href="/guide/">가이드 홈</a>
+              <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+            </div>
+          </details>
+        </div>
+      </div>
+    </details>
+  </div>
+</div>
 <div id="shell"></div>
 <main class="st-app">
 <div class="hub">
@@ -101,11 +185,114 @@
 </a>
 </div>
 </section>
+
+<section class="hub-section">
+<div class="hub-head">
+<h2>핵심 콘텐츠</h2>
+<div class="sub">지저분하지 않게 “접기/펼치기”로 정리된 1장 요약</div>
+</div>
+
+<details class="ps-acc">
+<summary><span>🔥 초보가 가장 많이 망하는 10가지</span><span class="ps-badge">실수 방지</span></summary>
+<div class="ps-acc-body">
+<ol class="ps-note" style="margin:0; padding-left:18px; line-height:1.7;">
+<li><b>마진/수수료 무시</b> — 같은 픽이라도 북/라인 선택에 따라 장기 수익이 갈립니다.</li>
+<li><b>오즈 무브 과해석</b> — 무브는 정보일 수도, 단순 유동성일 수도 있습니다. 원인 확인이 먼저.</li>
+<li><b>연패 후 금액 확대(복구 심리)</b> — 파산 확률이 급상승합니다. 손실 캡/쿨다운이 우선.</li>
+<li><b>조합(파롤리) 남발</b> — 다리 수가 늘수록 실현 확률이 급격히 하락합니다(상관 포함).</li>
+<li><b>표본 부족(최근 5~10회)에 확신</b> — 우연이 강하게 섞입니다. 최소 최근20/전체를 같이 보세요.</li>
+<li><b>확률과 배당 혼동</b> — 배당이 높다고 확률이 높은 게 아닙니다. 암시확률/공정배당으로 비교하세요.</li>
+<li><b>약관/규정 미확인</b> — 보너스 조건 위반은 제한/몰수로 이어질 수 있습니다. 해석/체크가 필수.</li>
+<li><b>라이브에서 추격</b> — 감정 베팅이 가장 비쌉니다. 기준(손절·시간·단위)을 먼저 정하세요.</li>
+<li><b>모든 게임을 같은 기준으로 판단</b> — 스포츠/미니게임/카지노는 변동성과 하우스엣지가 다릅니다.</li>
+<li><b>기록을 안 남김</b> — CLV/근거 메모가 없으면 개선이 어렵습니다. 최소 “근거 1줄” 저장.</li>
+</ol>
+<div class="ps-note" style="margin-top:10px;">TIP) 위 10가지는 대부분 “기술” 문제가 아니라 <b>루틴/규칙 부재</b>에서 시작합니다.</div>
+</div>
+</details>
+
+<details class="ps-acc">
+<summary><span>📄 마켓별 한 장 요약</span><span class="ps-badge">1X2·핸디·O/U·라이브</span></summary>
+<div class="ps-acc-body">
+<div class="ps-row cols2">
+<div class="ps-out" style="margin-top:0;">
+<h4>승/무/패 (1X2)</h4>
+<ul>
+<li>3개 배당 → <b>오버라운드/마진</b>으로 “북 수수료”를 먼저 체크</li>
+<li>큰 무브가 나오면 <b>라인업/부상/뉴스</b> 확인이 우선</li>
+<li>동일 경기라도 북마다 마진 차이 큼 → <b>마진 낮은 북</b> 선택</li>
+</ul>
+</div>
+<div class="ps-out" style="margin-top:0;">
+<h4>오버/언더 (O/U)</h4>
+<ul>
+<li>라인(2.5 등) 자체가 시장의 “기준점”</li>
+<li>오즈 무브는 <b>득점 기대</b>(선발/페이스/날씨)에 민감</li>
+<li>무브 구간에서는 <b>라이브 대기</b>가 유리할 수 있음</li>
+</ul>
+</div>
+<div class="ps-out" style="margin-top:0;">
+<h4>핸디캡</h4>
+<ul>
+<li>라인(-1.0, -1.5)은 실력 차이를 반영한 시장 기준</li>
+<li>핸디는 <b>득점 분포</b>와 연결 → CLV/클로징 라인 체크</li>
+<li>동일 라인에서 배당 차이는 곧 <b>마진/가치</b> 차이</li>
+</ul>
+</div>
+<div class="ps-out" style="margin-top:0;">
+<h4>라이브</h4>
+<ul>
+<li>가장 중요한 건 <b>기준(단위/손절/시간 제한)</b></li>
+<li>감정 추격 금지: <b>연패 보호</b> 규칙을 먼저 적용</li>
+<li>사전픽 대비 라인이 유리해졌는지 <b>CLV</b>로 피드백</li>
+</ul>
+</div>
+</div>
+<div class="ps-note" style="margin-top:10px;">연결 도구: <a href="/analysis/">스포츠 분석기</a> · <a href="/tool/kelly/">켈리</a> · <a href="/cert/">보너스/인증</a></div>
+</div>
+</details>
+</section>
+
+<div class="promo-slot" id="promoSection" style="max-width:980px;margin:14px auto 0;padding:0 14px;">
+  <div class="title"><span class="badge">PROMO</span>인증놀이터 신규 이벤트</div>
+  <div class="promo-grid" aria-label="인증놀이터 프로모션">
+    <a class="promo-card" href="/cert/vegas/">
+      <div class="promo-media"><img src="/img/img1.jpg" alt="VEGAS 프로모션" loading="lazy" decoding="async"/></div>
+      <div class="promo-meta">
+        <div>
+          <div class="promo-name">VEGAS</div>
+          <div class="promo-code">가입코드 6789</div>
+        </div>
+        <div class="promo-arrow" aria-hidden="true">→</div>
+      </div>
+      <div class="promo-cta">
+        <span class="promo-pill"><strong>혜택 보기</strong></span>
+        <span class="promo-pill">회원가입</span>
+      </div>
+    </a>
+
+    <a class="promo-card" href="/cert/777/">
+      <div class="promo-media"><img src="/img/img2.jpg" alt="777 Bet 프로모션" loading="lazy" decoding="async"/></div>
+      <div class="promo-meta">
+        <div>
+          <div class="promo-name">777 BET</div>
+          <div class="promo-code">가입코드 6767</div>
+        </div>
+        <div class="promo-arrow" aria-hidden="true">→</div>
+      </div>
+      <div class="promo-cta">
+        <span class="promo-pill"><strong>혜택 보기</strong></span>
+        <span class="promo-pill">회원가입</span>
+      </div>
+    </a>
+  </div>
+</div>
+
 <div class="hub-note">
 <b>주의</b> · 가이드는 정보 제공 목적이며, 과몰입/무리한 베팅은 금물입니다. 도구 결과는 “예측”이 아니라 <b>리스크/기준</b>을 세우는 지표로 사용하세요.
       </div>
 </div>
 </main>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
+
 </body>
 </html>
