--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -34,11 +34,10 @@
     "offers": { "@type": "Offer", "price": "0", "priceCurrency": "KRW" }
   }
   </script>
-<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script defer="" src="/assets/js/j.71bbe4a35d81.js"></script>
 <script defer="" src="/assets/js/j.d2cf652ff950.js"></script>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
+
 <link href="/assets/css/x.11d0a10f603d.css" rel="stylesheet"/>
 <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
@@ -278,10 +277,93 @@
 <link href="/assets/vvip-pro.v71.css?v=71" rel="stylesheet"/>
 <script defer="" src="/assets/js/vvip-pro.v71.js?v=71"></script>
 <script defer="" src="/assets/js/vvip-brief.v71.js?v=71"></script>
-<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
-<link rel="stylesheet" href="/assets/css/patch.v94.productui.20260219.min.css"/>
+<script defer="" src="/assets/js/build.ver.js?v=v20260224-1845"></script>
+<script defer="" src="/assets/js/build.loader.js?v=v20260224-1845"></script>
+
+<link rel="stylesheet" href="/assets/css/hdr.shell.v1.20260221.css?v=119"/>
 </head>
 <body>
+<div id="_88stShellHeader" class="header header--shell" role="banner">
+  <div class="hdrShell">
+    <a class="hdrBrand" href="/" aria-label="홈으로 이동">
+      <img class="hdrLogo" src="/img/logo.png" alt="88ST" />
+      <span class="hdrName">88ST.Cloud</span>
+    </a>
+
+    <nav class="hdrNavDesktop" aria-label="주요 메뉴">
+      <a class="hdrLink" href="/cert/">인증사이트</a>
+      <a class="hdrLink" href="/">홈</a>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">분석기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/analysis/">스포츠 배당 분석기</a>
+          <a href="/tool-slot/">슬롯 RTP 분석기</a>
+          <a href="/tool-minigame/">미니게임 분석기</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">계산기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/tool-margin/">마진 계산기</a>
+          <a href="/tool-ev/">EV 계산기</a>
+          <a href="/tool-odds/">배당↔확률 변환</a>
+          <a href="/tool-casino/">바카라 전략 계산기</a>
+          <a href="/logbook/">베팅 로그북</a>
+          <a href="/calc/">계산기 홈</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">가이드</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/guide/">가이드 홈</a>
+          <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+        </div>
+      </details>
+    </nav>
+
+    <details class="hdrNavMobile">
+      <summary class="hdrBurger" aria-label="메뉴 열기">≡</summary>
+      <div class="hdrMobileMenu" role="menu">
+        <a href="/cert/">인증사이트</a>
+        <a href="/">홈</a>
+
+        <div class="hdrMobileGroup">
+          <details>
+            <summary>분석기</summary>
+            <div class="hdrMenu">
+              <a href="/analysis/">스포츠 배당 분석기</a>
+              <a href="/tool-slot/">슬롯 RTP 분석기</a>
+              <a href="/tool-minigame/">미니게임 분석기</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>계산기</summary>
+            <div class="hdrMenu">
+              <a href="/tool-margin/">마진 계산기</a>
+              <a href="/tool-ev/">EV 계산기</a>
+              <a href="/tool-odds/">배당↔확률 변환</a>
+              <a href="/tool-casino/">바카라 전략 계산기</a>
+              <a href="/logbook/">베팅 로그북</a>
+              <a href="/calc/">계산기 홈</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>가이드</summary>
+            <div class="hdrMenu">
+              <a href="/guide/">가이드 홈</a>
+              <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+            </div>
+          </details>
+        </div>
+      </div>
+    </details>
+  </div>
+</div>
 <div class="wrap">
 <div class="hero">
 <h1>Bet365 가상게임 전 종목 배당 마진·공정배당 분석기</h1>
@@ -498,6 +580,5 @@
       }
     })();
   </script>
-<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
