--- a/tool/kelly/index.html
+++ b/tool/kelly/index.html
@@ -24,19 +24,101 @@
 <link href="/assets/c.d0474bb4988d.css" rel="stylesheet"/>
 <link href="/assets/css/x.47ddb177636d.css" rel="stylesheet"/>
 <script type="application/ld+json">{"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"켈리 기준은 무엇인가요?","acceptedAnswer":{"@type":"Answer","text":"켈리 기준은 장기 로그성장률을 최대화하는 베팅 비중을 산출하는 방법입니다. 변동성이 커서 보수적(1/2, 1/4 Kelly)으로 쓰는 경우가 많습니다."}},{"@type":"Question","name":"확률이 정확하지 않으면 어떻게 되나요?","acceptedAnswer":{"@type":"Answer","text":"내 예상 확률이 과대평가되면 권장 비중이 과도해질 수 있습니다. 보수 계수(예: 1/4 Kelly)와 최대 비중 캡을 함께 사용하는 것을 권장합니다."}},{"@type":"Question","name":"켈리가 0% 이하로 나오면?","acceptedAnswer":{"@type":"Answer","text":"해당 입력 조건에서는 기대값이 음수로 해석될 수 있어 비중 0%가 권장됩니다."}},{"@type":"Question","name":"이 도구는 투자/배팅 조언인가요?","acceptedAnswer":{"@type":"Answer","text":"아니요. 본 도구는 판단 보조용 계산기이며, 결과/수익을 보장하지 않습니다."}}]}</script>
-<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <script defer="" src="/assets/js/j.71bbe4a35d81.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.d2cf652ff950.js"></script>
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
+
 <meta content="/img/logo.png" property="og:image"/>
-<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
-<link rel="stylesheet" href="/assets/css/patch.v94.productui.20260219.min.css"/>
+<script defer="" src="/assets/js/build.ver.js?v=v20260224-1845"></script>
+<script defer="" src="/assets/js/build.loader.js?v=v20260224-1845"></script>
+
+<link rel="stylesheet" href="/assets/css/hdr.shell.v1.20260221.css?v=119"/>
 </head>
 <body>
+<div id="_88stShellHeader" class="header header--shell" role="banner">
+  <div class="hdrShell">
+    <a class="hdrBrand" href="/" aria-label="홈으로 이동">
+      <img class="hdrLogo" src="/img/logo.png" alt="88ST" />
+      <span class="hdrName">88ST.Cloud</span>
+    </a>
+
+    <nav class="hdrNavDesktop" aria-label="주요 메뉴">
+      <a class="hdrLink" href="/cert/">인증사이트</a>
+      <a class="hdrLink" href="/">홈</a>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">분석기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/analysis/">스포츠 배당 분석기</a>
+          <a href="/tool-slot/">슬롯 RTP 분석기</a>
+          <a href="/tool-minigame/">미니게임 분석기</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">계산기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/tool-margin/">마진 계산기</a>
+          <a href="/tool-ev/">EV 계산기</a>
+          <a href="/tool-odds/">배당↔확률 변환</a>
+          <a href="/tool-casino/">바카라 전략 계산기</a>
+          <a href="/logbook/">베팅 로그북</a>
+          <a href="/calc/">계산기 홈</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">가이드</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/guide/">가이드 홈</a>
+          <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+        </div>
+      </details>
+    </nav>
+
+    <details class="hdrNavMobile">
+      <summary class="hdrBurger" aria-label="메뉴 열기">≡</summary>
+      <div class="hdrMobileMenu" role="menu">
+        <a href="/cert/">인증사이트</a>
+        <a href="/">홈</a>
+
+        <div class="hdrMobileGroup">
+          <details>
+            <summary>분석기</summary>
+            <div class="hdrMenu">
+              <a href="/analysis/">스포츠 배당 분석기</a>
+              <a href="/tool-slot/">슬롯 RTP 분석기</a>
+              <a href="/tool-minigame/">미니게임 분석기</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>계산기</summary>
+            <div class="hdrMenu">
+              <a href="/tool-margin/">마진 계산기</a>
+              <a href="/tool-ev/">EV 계산기</a>
+              <a href="/tool-odds/">배당↔확률 변환</a>
+              <a href="/tool-casino/">바카라 전략 계산기</a>
+              <a href="/logbook/">베팅 로그북</a>
+              <a href="/calc/">계산기 홈</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>가이드</summary>
+            <div class="hdrMenu">
+              <a href="/guide/">가이드 홈</a>
+              <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+            </div>
+          </details>
+        </div>
+      </div>
+    </details>
+  </div>
+</div>
 <div class="wrap">
 <div class="topbar">
 <div class="brand"><span class="badge">88</span> Kelly 비중</div>
@@ -109,6 +191,5 @@
 <div class="small" style="margin-top:14px;opacity:.75;">※ 본 도구는 판단 보조용이며 결과/수익을 보장하지 않습니다.</div>
 </div>
 <script src="../../assets/js/inline-bundles/b.c66a197be4.js"></script>
-<script defer="" src="/assets/js/j.025d649c8b11.js"></script>
 </body>
 </html>
